--- a/css/css_pp.css
+++ b/css/css_pp.css
@@ -17,7 +17,7 @@
     width: 50%;
     height: 100px;
 
-    
+
 }
 #selectNav{
     position:relative;
@@ -30,7 +30,7 @@ a.nav-item {
   color: black;
 }
 body {
-  background-color: rgb(192, 192, 192);
+  background-color: white;
   color: black;
   font-family: "Futura Medium";
 }
@@ -42,15 +42,13 @@ body {
     position: fixed;
     bottom: 0;
     background-color: rgb(64,64,64);
-    color: antiquewhite;
+    color: white;
     width: 100%;
     height: 200px;
     font-size: 12px;
-
 }
 
 #TOS {
 
-    background-color: blue
-
+    background-color: rgb(192, 192, 192)
 }
