--- a/LogInCSS.css
+++ b/LogInCSS.css
@@ -85,11 +85,11 @@ button.navButton:hover {
     color: white;
 }
 #main {
-    padding-top: 100px;
+    padding-top: 130px;
     padding-right: 100px;
     padding-left: 100px;
     text-align: center;
-    font-size: 40px;
+    font-size: 200%;
     width: 100%;
     font-family: "Futura Medium";
     }
