--- a/EmailUs.css
+++ b/EmailUs.css
@@ -90,7 +90,7 @@ button.navButton:hover {
     padding-right: 100px;
     padding-left: 100px;
     text-align: center;
-    font-size: 40px;
+    font-size: 200%;
     width: 100%;
     font-family: "Futura Medium";
     }
@@ -113,14 +113,14 @@ input.submit{
   height:150%;
   background-color: rgb(255,159,17);
   text-align: center;
-  border-top-left-radius: 30px;
-  border-bottom-left-radius:30px;
-  border-top-right-radius: 30px;
-  border-bottom-right-radius:30px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius:10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius:10px;
   outline: none;
   color: black;
   border-color:black;
-  font-size: 35px;
+  font-size: 30px;
 }
 input{
     width:40%;
@@ -172,6 +172,10 @@ textarea{
   height: 200px;
   border-width: 2px;
   text-align: center;
-  font-size: 40px;
+  font-size: 35px;
   border-color:black;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius:10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius:10px;
 }
