--- a/HomePage_LoggedIn.css
+++ b/HomePage_LoggedIn.css
@@ -1,6 +1,6 @@
 div.title {
   text-align: left;
-  background-color: white;
+  background-color: rgb(2,1,11);
   position: fixed;
   width: 100%;
   height: 10%;
@@ -12,19 +12,18 @@ div.title {
   left: 0%;
   bottom: 91%;
   width: 100%;
-  border-bottom: 2px solid black;
   }
-#TopRight{
-  position: relative;
-  top: -122%;
-  right: -85%;
-  height: 100%;
-  font-size: 100%;
-  width: 15%;
-  }
+  #TopRight{
+    position: fixed;
+    top: -22.2%;
+    right: 1%;
+    height: 50%;
+    font-size: 100%;
+    width: 85%;
+    }
   ul, li{ list-style:none; margin:0%; padding-left:0.3%; padding-top:5.9%; font-size:110%;}
-.selectNav ul{background-color:white; border-top: 2px solid;}
-.selectNav a{color:white; display:block; text-decoration:none;top:0%; }
+.selectNav ul{background-color:white; border-bottom: 2px solid;}
+.selectNav a{color:white; display:block; text-decoration:none;top:0%}
 .selectNav a:hover{background -color:#333333; text-decoration:none; color:white;}
 .selectNav > ul{ display:table; width:100%;margin-top:-7%;}
 .selectNav > ul > li{ display:table-cell; border-right:none;}
@@ -38,14 +37,12 @@ a.nav-item {
   color: black;
 }
 button.logo{
-padding-left: 0%;
+padding-left: 0.2%;
 padding-top:0.3%;
-height:62%;
-border-color: white;
-width: 0;
-outline:white;
+height:67%;
+width:0%;
+outline:none;
 border:none;
-background: none;
 }
 button.logo:hover{
   background-color: rgb(28,18,18)
@@ -53,7 +50,7 @@ button.logo:hover{
 img{
   height:100%;
   width:-100%;
-  padding-left:00%;
+  padding-left:-100%;
 }
 /*this expands the top navigation bar selectNav */
 body {
@@ -63,7 +60,7 @@ body {
 }
 button {
     background-color: rgb(2,1,11);
-    border-color: rgb(2,1,11);
+    border-color: rgb(28,18,18);
     color: white;
     border: none;
     transition-duration: 0.4s;
@@ -77,57 +74,90 @@ button:hover{
 button.navButton {
     background-color: rgb(255,255,255);
     border-color: rgb(255,255,255);
-    color: rgb(23,55,94);
+    color: rgb(0,0,128);
     border: none;
     transition-duration: 0.4s;
     border-radius: 0.5%;
 }
 
 button.navButton:hover {
-    background-color: rgb(23,55,94);
+    background-color: blue;
     color: white;
 }
-#main {
-    padding-top: 200px;
-    padding-bottom: 75px; /*ensure nothing drops below bottom nav*/
-    text-align: center;
-    font-size: 200%;
-    }
-input.top{
-  width:80%;
+#parent{
+  display: flex;
+}
+#trendingPosts{
+  width: 100%;
+}
+#main2{
+  padding-top: 1%;
   text-align: center;
-  border-top-left-radius: 30px;
-  border-bottom-left-radius:30px;
+  font-size: 130%;
+  width: 10%;
+  height: 5000px;
+  font-family: "Futura Medium";
+  background-color: rgb(85,142,213);
+}
+
+#main {
+    padding-bottom: -1000px;
+    text-align: left;
+    padding-bottom:190px;
+    font-size: 150%;
+    height: 100%;
+    font-family: "Futura Medium";
+    flex: 1;
+    }
+
+input.top{
+  width:87%;
+  text-align: center;
   outline: none;
   border-width: 0%;
-  border-color:gray;
-  height: 40%;
-}
-input{
-    width:70%;
-    text-align: center;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    outline: none;
-    border-style: solid;
-    border-width: 2px;
-    border-color:black;
-    height: 70px;
-}
-button.searchButton{
-    background-color: rgb(255,159,17);
-    color: black;
-    font-family: "Futura Medium";
-    width: 10%;
-    border-color: black;
-    border-style: solid;
-    border-width:2px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    outline: none;
-    height: 70px;
+  height: 30px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  font-family: "Futura Medium";
 
 }
+input.submit{
+  width:40%;
+  background-color: rgb(255,159,17);
+  text-align: center;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius:10px;
+  outline: none;
+  color: black;
+  font-size: 35px;
+}
+input{
+    width:40%;
+    text-align: center;
+    outline: none;
+    border-color:black;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius:10px;
+}
+button.searchButtonTop{
+  background-color: rgb(255,159,17);
+  color: black;
+  font-family: "Futura Medium";
+  width: 10%;
+  border-style: solid;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  outline: none;
+  height: 32px;
+  border-color:black;
+}
+
 #botNav {
     position: fixed;
     padding-left: 2%;
@@ -138,7 +168,6 @@ button.searchButton{
     height: 22%;
 
 }
-
 #TOS {
 
     background-color: rgb(192, 192, 192)
