--- a/LogInCSS.css
+++ b/LogInCSS.css
@@ -89,8 +89,10 @@ button.navButton:hover {
     padding-right: 100px;
     padding-left: 100px;
     text-align: center;
+    padding-bottom:190px;
     font-size: 200%;
     width: 100%;
+    height: 100%;
     font-family: "Futura Medium";
     }
 input.top{
@@ -104,7 +106,7 @@ input.top{
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
   font-family: "Futura Medium";
-  font-weight: bold;
+
 }
 input.submit{
   width:40%;
